--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,10 @@ target 'testeCrop' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'react-native-image-editor', :path => '../node_modules/@react-native-community/image-editor'
+
+  pod 'RNImageRotate', :path => '../node_modules/react-native-image-rotate'
+
   target 'testeCropTests' do
     inherit! :complete
     # Pods for testing
