--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/image-editor": "^2.3.0",
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-image-rotate": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
